# closeable

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: closeable.py
test/: test_closeable.py
